[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lunar_python"
dynamic = ["version"]
description = "lunar is a calendar library for Solar and Chinese Lunar."
readme = "README_EN.md"
license = {text = "MIT"}
authors = [
    {name = "6tail", email = "6tail@6tail.cn"}
]
keywords = [
    "solar",
    "lunar",
    "chinese",
    "calendar",
    "traditional",
    "bazi",
    "eight-char",
    "jieqi",
    "festival"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Natural Language :: Chinese (Simplified)",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/6tail/lunar-python"
Documentation = "https://6tail.cn/calendar/api.html"
Source = "https://github.com/6tail/lunar-python"
"Bug Tracker" = "https://github.com/6tail/lunar-python/issues"
Changelog = "https://github.com/6tail/lunar-python/blob/master/CHANGELOG.md"

[tool.setuptools.dynamic]
version = {attr = "lunar_python.__version__"}

[tool.setuptools.packages.find]
include = ["lunar_python*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"

[[tool.uv.index]]
name = "nexus"
url = "https://nexus.mymirrorai.com/repository/pypi/simple"
publish-url = "https://nexus.mymirrorai.com/repository/pypi/"
